created frontend of main site

--- a/index.html
+++ b/index.html
@@ -9,17 +9,75 @@
 <body>
     <!-- Nav -->
     <nav>
-
+        <div class="logo">
+            <h1>Scrapers</h1>
+        </div>
+        <div class="nav-links">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </div>
     </nav>
 
     <!-- Main -->
     <main>
+        <h1>Place where you can actually scrape data!!</h1>
 
+        <div class="tools">
+            <ul>
+                <li><a href="#">Web Scraping</a></li>
+                <li><a href="#">Data Mining</a></li>
+                <li><a href="#">Data Extraction</a></li>
+                <li><a href="#">Data Analysis</a></li>
+            </ul>
+        </div><hr>
+
+        <h2>Popular Tools</h2>
+
+        <div class="scrapable-sites">
+            <div class="card">
+                <h3>Youtube</h3>
+                <p>Scrape Youtube for video data</p>
+                <a href="./linked_sites/youtube.html" target="_blank">Try it!!</a>
+            </div>
+
+            <div class="card">
+                <h3>Amazon</h3>
+                <p>Get best deals on your desired products</p>
+                <a href="#">Try it!!</a>
+            </div>
+
+            <div class="card">
+                <h3>Top Industries</h3>
+                <p>Get insights about best growing companies of the year</p>
+                <a href="#">Try it!!</a>
+            </div>
+
+            <div class="card">
+                <h3>Stocks</h3>
+                <p>Visual representation of top companies stock prizes</p>
+                <a href="#">Try it!!</a>
+            </div>
+        </div>
+
+        <div class="margin-bottom">  </div>
     </main>
 
     <!-- Footer -->
     <footer>
-
+        <div class="footer-content">
+            <p>&copy; Copyright 2024, Scrapyard Sorcerers</p>
+        </div>
+        <div class="footer-links">
+            <ul>
+                <li><a href="#">Github</a></li>
+                <li><a href="#">Linkedin</a></li>
+                <li><a href="#">Twitter</a></li>
+            </ul>
+        </div>
     </footer>
 
     <!-- Scripts Link -->
